--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h2>Contáctanos</h2>
     <p>📍 Puebla, México</p>
     <p> <strong>Correo:</strong> 
-    <a href="mailto:tuemail@example.com" class="contact-link">contacto.reparaxpress@gmail.com</a></p>
+    <a href="mailto:contacto.reparaxpress@gmail.com" class="contact-link">contacto.reparaxpress@gmail.com</a></p>
     <p><strong>WhatsApp:</strong> 
     <a href="https://wa.me/522212237349" class="contact-link">2212237349</a></p>
     <p><strong>Facebook:</strong> 
