Actualización de index

--- a/index.html
+++ b/index.html
@@ -54,6 +54,29 @@
     <i class="fab fa-whatsapp"></i> Cotización </a>
   </section>
 
+  <section class="gallery" id="galeria">
+    <h2>Galería de Trabajos Realizados</h2>
+    <div class="gallery-grid">
+    <div class="gallery-item">
+      <img src="img/trabajo1.jpg" alt="Reparación de celular" />
+      <p>Reparación de pantalla rota</p>
+    </div>
+    <div class="gallery-item">
+      <img src="img/trabajo2.jpg" alt="Reparación de laptop" />
+      <p>Limpieza interna de laptop</p>
+    </div>
+    <div class="gallery-item">
+      <img src="img/trabajo3.jpg" alt="Reparación de consola" />
+      <p>Mantenimiento de consola Xbox</p>
+    </div>
+    <div class="gallery-item">
+      <img src="img/trabajo4.jpg" alt="Reparación de batería" />
+      <p>Cambio de batería celular</p>
+    </div>
+    </div>
+  </section>
+
+
   <section class="contact" id="contacto">
     <h2>Contáctanos</h2>
     <p>📍 Puebla, México</p>
