Actualización de facebook

--- a/index.html
+++ b/index.html
@@ -54,29 +54,6 @@
     <i class="fab fa-whatsapp"></i> Cotización </a>
   </section>
 
-  <section class="gallery" id="galeria">
-    <h2>Galería de Trabajos Realizados</h2>
-    <div class="gallery-grid">
-    <div class="gallery-item">
-      <img src="img/trabajo1.jpg" alt="Reparación de celular" />
-      <p>Reparación de pantalla rota</p>
-    </div>
-    <div class="gallery-item">
-      <img src="img/trabajo2.jpg" alt="Reparación de laptop" />
-      <p>Limpieza interna de laptop</p>
-    </div>
-    <div class="gallery-item">
-      <img src="img/trabajo3.jpg" alt="Reparación de consola" />
-      <p>Mantenimiento de consola Xbox</p>
-    </div>
-    <div class="gallery-item">
-      <img src="img/trabajo4.jpg" alt="Reparación de batería" />
-      <p>Cambio de batería celular</p>
-    </div>
-    </div>
-  </section>
-
-
   <section class="contact" id="contacto">
     <h2>Contáctanos</h2>
     <p>📍 Puebla, México</p>
@@ -85,7 +62,7 @@
     <p><strong>WhatsApp:</strong> 
     <a href="https://wa.me/522212237349" class="contact-link">2212237349</a></p>
     <p><strong>Facebook:</strong> 
-    <a href="https://www.facebook.com/tuPaginaFacebook" target="_blank" rel="noopener" class="contact-link">Visitar página</a></p>
+    <a href="https://www.facebook.com/share/1BUA6Dj12U/" target="_blank" rel="noopener" class="contact-link">Visitar página</a></p>
   </section>
 
   <footer>
